fix: cors 헤더, getter 등등 여러 버그 수정